--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   },
   "dependencies": {
     "moment": "^2.29.0",
-    "nuxt": "^2.14.0",
     "tailwindcss": "^1.8.5",
+    "vue": "^2.6.12",
+    "vue-template-compiler": "^2.6.12",
     "vuex-persistedstate": "^3.1.0"
   },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^2.1.0",
+    "@nuxtjs/tailwindcss": "^3.1.0",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.1.0",
