--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-18.04
-    step:
+    steps:
     - uses: actions/checkout@v2
 
     - name: setup node
