--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -24,13 +24,13 @@ jobs:
           ${{ runner.os }}-node-
 
     - name: install
-      run: npm ci
+      run: yarn ci
 
     - name: test
-      run: npm test
+      run: yarn test
 
     - name: generate
-      run: npm run generate
+      run: yarn run generate
 
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
