--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "moment": "^2.29.0",
+    "nuxt": "^2.14.6",
     "tailwindcss": "^1.8.5",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
