--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "elliptic": ">= 6.5.4",
     "moment": "^2.29.0",
     "nuxt": "^2.14.6",
+    "ssri": ">= 8.0.1",
     "tailwindcss": "^1.8.5",
     "vue": "^2.6.12",
     "vue-template-compiler": "^2.6.12",
